--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="demoApp">
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
@@ -8,10 +8,7 @@
 </head>
 <body>
 <div class="container">
-    <p>
-        Hello base.
-    </p>
-    <p id="secondParagraph"></p>
+    <div ng-view></div>
 </div>
 </body>
 </html>
