Add bootstrap css.

--- a/client/index.html
+++ b/client/index.html
@@ -7,9 +7,11 @@
     <script type="text/javascript" src="bundle.js"></script>
 </head>
 <body>
-<p>
-    Hello base.
-</p>
-<p id="secondParagraph"></p>
+<div class="container">
+    <p>
+        Hello base.
+    </p>
+    <p id="secondParagraph"></p>
+</div>
 </body>
 </html>
