Copy Todo to Events.

--- a/client/modules/demo-app/routes/root/root.html
+++ b/client/modules/demo-app/routes/root/root.html
@@ -1,4 +1,5 @@
 <div>
     <a href="#/greeting">Greeting</a><br/>
     <a href="#/todo">Todo</a><br/>
+    <a href="#/events">Events</a><br/>
 </div>
