--- a/client/modules/demo-app/routes/events/details.html
+++ b/client/modules/demo-app/routes/events/details.html
@@ -1,35 +1,29 @@
 <div ng-controller="EventsItemController as events">
-    <h1>Event</h1>
+    <div class="container">
+        <div class="createEventView">
+            <div class="header">
+                <h1>Create event</h1>
+            </div>
+            <div class="createEventBody">
 
-    <form role="form">
-        <div class="form-group">
-            <label>
-                Title
-                <input
-                        ng-model="events.item.title"
-                        ng-class="{'done': events.item.done}"
-                        class="form-control"
-                        />
-            </label>
-        </div>
-        <div class="form-group">
-            <label>
-                Description
-                <textarea
-                        ng-model="events.item.description"
-                        ng-class="{'done': events.item.done}"
-                        class="form-control"
-                        ></textarea>
-            </label>
-        </div>
-        <div class="checkbox">
-            <label>
-                <input type="checkbox" ng-model="events.item.done"/>
-                Done
-            </label>
-        </div>
-    </form>
+                <form role="form">
+                    <label for="name">Event name</label>
+                    <input id="name" ng-model="events.item.name"/>
+                    <br/><br/>
 
-    <hr/>
-    <a href="#/events">Back</a>
+                    <label for="time">Time</label>
+                    <input id="time" ng-model="events.item.time"/>
+                    <br/><br/>
+
+                    <label for="location">Location</label>
+                    <input id="location" ng-model="events.item.location"/>
+                    <br/><br/>
+
+                    <button type="submit" ng-click="">Create event</button>
+
+                </form>
+            </div>
+
+        </div>
+    </div>
 </div>
