--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <title></title>
     <link rel="stylesheet" type="text/css" href="bundle.css"/>
+    <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDk_iQ6QWOTHW-TWoXSFLwbcnhaxlcnXXk&libraries=places&sensor=true"></script>
     <script type="text/javascript" src="bundle.js"></script>
+    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/149125/locator.min.js"></script>
+    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/149125/locator-tpl.js"></script>
 </head>
 <body>
 <div class="container">
