--- a/client/modules/demo-app/routes/events/list.html
+++ b/client/modules/demo-app/routes/events/list.html
@@ -2,6 +2,9 @@
     <h1>Events</h1>
 
     <form>
+        <p>
+            <a href="#/events/new">Create event</a>
+        </p>
         <ul class="list-group">
             <li class="list-group-item" ng-repeat="item in events.items">
                 <a href="#/events/{{$index}}">
