--- a/client/modules/demo-app/routes/events/list.html
+++ b/client/modules/demo-app/routes/events/list.html
@@ -10,6 +10,9 @@
                 <a href="#/events/{{$index}}">
                     {{ item.name }}
                 </a>
+                <button type="button" class="btn btn-default btn-xs" ng-click="events.delete(item)" style="float: right">
+                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                </button>
             </li>
         </ul>
     </form>
