--- a/client/modules/demo-app/routes/events/details.html
+++ b/client/modules/demo-app/routes/events/details.html
@@ -1,7 +1,7 @@
 <div ng-controller="EventsItemController as events">
     <div class="createEventView">
         <div class="header">
-            <h1>Create event</h1>
+            <h1>{{events.header}}</h1>
         </div>
         <div class="createEventBody">
 
@@ -25,9 +25,7 @@
                     ng-click="events.clearLocation()"/>
                 <br/><br/>
 
-                <input type="hidden" ng-model="events.item.imageKey" ng-init="events.item.imageKey='eiffel'"/>
-
-                <button type="submit" ng-click="events.save(events.item)">Create event</button>
+                <button type="submit" ng-click="events.save(events.item)">{{events.buttonText}}</button>
 
             </form>
         </div>
