--- a/client/modules/demo-app/routes/events/details.html
+++ b/client/modules/demo-app/routes/events/details.html
@@ -1,4 +1,7 @@
 <div ng-controller="EventsItemController as events">
+    <div class="header-links">
+        <a href="#/events/new">Create event</a> | <a href="#/events">Statistics</a>
+    </div>
     <div class="createEventView">
         <div class="header">
             <h1>{{events.header}}</h1>
