--- a/client/modules/demo-app/routes/events/list.html
+++ b/client/modules/demo-app/routes/events/list.html
@@ -1,5 +1,7 @@
 <div ng-controller="EventsListController as events">
-    <h1>Events</h1>
+    <div class="header-links">
+        <a href="#/events/new">Create event</a> | <a href="#/events">Statistics</a>
+    </div>
 
     <form>
         <ul class="list-group">
@@ -13,9 +15,6 @@
                 </button>
             </li>
         </ul>
-        <div>
-
-        </div>
     </form>
 
 </div>
