--- a/client/modules/demo-app/routes/events/list.html
+++ b/client/modules/demo-app/routes/events/list.html
@@ -3,6 +3,27 @@
         <a href="#/events/new">Create event</a> | <a href="#/events">Statistics</a>
     </div>
 
+    <div class="createEventView">
+        <div class="header">
+            <h1>Statistics</h1>
+        </div>
+        <div class="createEventBody">
+
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+
+        </div>
+    </div>
+
+
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+
     <form>
         <ul class="list-group">
             <li class="list-group-item" ng-repeat="item in events.items">
