--- a/client/modules/demo-app/routes/events/list.html
+++ b/client/modules/demo-app/routes/events/list.html
@@ -9,11 +9,9 @@
         </div>
         <div class="createEventBody">
 
-            <p>&nbsp;</p>
-            <p>&nbsp;</p>
-            <p>&nbsp;</p>
-            <p>&nbsp;</p>
-            <p>&nbsp;</p>
+            <center>
+                <img src="/images/graf.png"/>
+            </center>
 
         </div>
     </div>
