--- a/client/modules/demo-app/routes/events/list.html
+++ b/client/modules/demo-app/routes/events/list.html
@@ -11,6 +11,10 @@
 
             <center>
                 <img src="/images/graf.png"/>
+                <br/>
+                <br/>
+                <br/>
+                <img src="/images/text.png"/>
             </center>
 
         </div>
